tests/ui/inference/issue-72690.stderr
error[E0283]: type annotations needed
  --> $DIR/issue-72690.rs:7:5
   |
LL |     String::from("x".as_ref());
   |     ^^^^^^ cannot infer type for reference `&_`
   |
   = note: multiple `impl`s satisfying `String: From<&_>` found in the `alloc` crate:
           - impl From<&String> for String;
           - impl From<&str> for String;
   = note: cannot satisfy `str: AsRef<_>`

error[E0283]: type annotations needed
  --> $DIR/issue-72690.rs:11:9
   |
LL |     |x| String::from("x".as_ref());
   |         ^^^^^^ cannot infer type for reference `&_`
   |
   = note: multiple `impl`s satisfying `String: From<&_>` found in the `alloc` crate:
           - impl From<&String> for String;
           - impl From<&str> for String;
   = note: cannot satisfy `str: AsRef<_>`

error[E0283]: type annotations needed for `&_`
  --> $DIR/issue-72690.rs:15:9
   |
LL |     let _ = "x".as_ref();
   |         ^       ------ type must be known at this point
   |
   = note: multiple `impl`s satisfying `str: AsRef<_>` found in the following crates: `core`, `std`:
           - impl AsRef<ByteStr> for str;
           - impl AsRef<OsStr> for str;
           - impl AsRef<Path> for str;
           - impl AsRef<[u8]> for str;
           - impl AsRef<str> for str;
help: consider giving this pattern a type, where the type for type parameter `T` is specified
   |
LL |     let _: &T = "x".as_ref();
   |          ++++

error[E0283]: type annotations needed
  --> $DIR/issue-72690.rs:19:5
   |
LL |     String::from("x".as_ref());
   |     ^^^^^^ cannot infer type for reference `&_`
   |
   = note: multiple `impl`s satisfying `String: From<&_>` found in the `alloc` crate:
           - impl From<&String> for String;
           - impl From<&str> for String;
   = note: cannot satisfy `str: AsRef<_>`

error[E0283]: type annotations needed
  --> $DIR/issue-72690.rs:25:5
   |
LL |     String::from("x".as_ref());
   |     ^^^^^^ cannot infer type for reference `&_`
   |
   = note: multiple `impl`s satisfying `String: From<&_>` found in the `alloc` crate:
           - impl From<&String> for String;
           - impl From<&str> for String;
   = note: cannot satisfy `str: AsRef<_>`

error[E0283]: type annotations needed
  --> $DIR/issue-72690.rs:33:5
   |
LL |     String::from("x".as_ref());
   |     ^^^^^^ cannot infer type for reference `&_`
   |
   = note: multiple `impl`s satisfying `String: From<&_>` found in the `alloc` crate:
           - impl From<&String> for String;
           - impl From<&str> for String;
   = note: cannot satisfy `str: AsRef<_>`

error[E0283]: type annotations needed
  --> $DIR/issue-72690.rs:41:5
   |
LL |     String::from("x".as_ref());
   |     ^^^^^^ cannot infer type for reference `&_`
   |
   = note: multiple `impl`s satisfying `String: From<&_>` found in the `alloc` crate:
           - impl From<&String> for String;
           - impl From<&str> for String;
   = note: cannot satisfy `str: AsRef<_>`

error[E0283]: type annotations needed
  --> $DIR/issue-72690.rs:47:5
   |
LL |     String::from("x".as_ref());
   |     ^^^^^^ cannot infer type for reference `&_`
   |
   = note: multiple `impl`s satisfying `String: From<&_>` found in the `alloc` crate:
           - impl From<&String> for String;
           - impl From<&str> for String;
   = note: cannot satisfy `str: AsRef<_>`

error[E0283]: type annotations needed
  --> $DIR/issue-72690.rs:55:5
   |
LL |     String::from("x".as_ref());
   |     ^^^^^^ cannot infer type for reference `&_`
   |
   = note: multiple `impl`s satisfying `String: From<&_>` found in the `alloc` crate:
           - impl From<&String> for String;
           - impl From<&str> for String;
   = note: cannot satisfy `str: AsRef<_>`

error: aborting due to 9 previous errors

For more information about this error, try `rustc --explain E0283`.
